Fix Search overlay top padding on mobiles

--- a/src/scss/components/_search-overlay.scss
+++ b/src/scss/components/_search-overlay.scss
@@ -6,9 +6,8 @@
   z-index: 9999; // bigger than c-bully
 
   width: 100%;
-
-  padding-left: var(--theme-wrapper-sides-spacing);
-  padding-right: var(--theme-wrapper-sides-spacing);
+  
+  padding: 1em var(--theme-wrapper-sides-spacing);
 
   --theme-button-padding: .6em 1.7em;
   --theme-input-search-focus-overlay-shadow: inset 0px 0px 0px 2px rgba(var(--opacity-color), 1);
