--- a/style.css
+++ b/style.css
@@ -1069,8 +1069,7 @@ table {
   left: 0;
   z-index: 9999;
   width: 100%;
-  padding-left: var(--theme-wrapper-sides-spacing);
-  padding-right: var(--theme-wrapper-sides-spacing);
+  padding: 1em var(--theme-wrapper-sides-spacing);
   --theme-button-padding: .6em 1.7em;
   --theme-input-search-focus-overlay-shadow: inset 0px 0px 0px 2px rgba(var(--opacity-color), 1);
   --theme-search-input-focus:
